Fixing copy in push notification dialog, not showing notification tick box in push notifications not enabled, fixing syntax

--- a/app/javascript/components/push-notifications-toggle/styles.css
+++ b/app/javascript/components/push-notifications-toggle/styles.css
@@ -5,11 +5,11 @@
 }
 
 .on {
-  color: var(--c-blue)
+  color: var(--c-blue);
 }
 
 .off {
-  color: var(--c-dark-grey)
+  color: var(--c-dark-grey);
 }
 
 .blocked_copy {
